--- a/Drink Journal/Base.lproj/Main.storyboard
+++ b/Drink Journal/Base.lproj/Main.storyboard
@@ -15,9 +15,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Glass" translatesAutoresizingMaskIntoConstraints="NO" id="v5g-Wv-nlC">
-                                <rect key="frame" x="87" y="175" width="240" height="240"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qq6-Go-Gnb">
                                 <rect key="frame" x="87" y="501" width="67" height="22"/>
                                 <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -40,29 +37,32 @@
                                     <action selector="plus:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hgv-bh-e8m"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Cups of Water" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmr-Vk-4Ff">
-                                <rect key="frame" x="104" y="96" width="207" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cups of Water" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmr-Vk-4Ff">
+                                <rect key="frame" x="20" y="96" width="374" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Glass" translatesAutoresizingMaskIntoConstraints="NO" id="v5g-Wv-nlC">
+                                <rect key="frame" x="87" y="180" width="240" height="240"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="dKg-zp-10x" firstAttribute="leading" secondItem="Qq6-Go-Gnb" secondAttribute="trailing" constant="42" id="8mK-je-uC6"/>
                             <constraint firstItem="dKg-zp-10x" firstAttribute="centerY" secondItem="Mpc-UX-rk6" secondAttribute="centerY" id="Iwa-t5-5n5"/>
-                            <constraint firstItem="dKg-zp-10x" firstAttribute="top" secondItem="v5g-Wv-nlC" secondAttribute="bottom" constant="77" id="K7v-0Y-gWB"/>
+                            <constraint firstItem="dKg-zp-10x" firstAttribute="top" secondItem="v5g-Wv-nlC" secondAttribute="bottom" constant="72" id="K7v-0Y-gWB"/>
                             <constraint firstItem="gmr-Vk-4Ff" firstAttribute="centerX" secondItem="v5g-Wv-nlC" secondAttribute="centerX" id="MLQ-al-ZyX"/>
                             <constraint firstItem="v5g-Wv-nlC" firstAttribute="trailing" secondItem="Mpc-UX-rk6" secondAttribute="trailing" id="SQV-C7-n5A"/>
                             <constraint firstItem="v5g-Wv-nlC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SU4-Eh-GiD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dKg-zp-10x" secondAttribute="bottom" constant="329" id="V9y-k1-k7A"/>
                             <constraint firstItem="gmr-Vk-4Ff" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="52" id="Vlu-A7-vso"/>
-                            <constraint firstItem="v5g-Wv-nlC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="131" id="aNg-od-cbS"/>
+                            <constraint firstItem="v5g-Wv-nlC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="136" id="aNg-od-cbS"/>
                             <constraint firstItem="v5g-Wv-nlC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="ao3-b2-BIt"/>
-                            <constraint firstItem="Qq6-Go-Gnb" firstAttribute="top" secondItem="v5g-Wv-nlC" secondAttribute="bottom" constant="86" id="h35-A1-mfm"/>
+                            <constraint firstItem="Qq6-Go-Gnb" firstAttribute="top" secondItem="v5g-Wv-nlC" secondAttribute="bottom" constant="81" id="h35-A1-mfm"/>
                             <constraint firstItem="Qq6-Go-Gnb" firstAttribute="baseline" secondItem="Mpc-UX-rk6" secondAttribute="baseline" id="hDm-Py-fGs"/>
                             <constraint firstItem="Qq6-Go-Gnb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="lFK-b8-iNv"/>
-                            <constraint firstItem="gmr-Vk-4Ff" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="104" id="oMi-5K-ZFa"/>
+                            <constraint firstItem="gmr-Vk-4Ff" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="oMi-5K-ZFa"/>
                             <constraint firstItem="Mpc-UX-rk6" firstAttribute="leading" secondItem="dKg-zp-10x" secondAttribute="trailing" constant="42" id="wsa-lM-OaJ"/>
                             <constraint firstItem="v5g-Wv-nlC" firstAttribute="centerX" secondItem="dKg-zp-10x" secondAttribute="centerX" id="yd2-kq-0sY"/>
                         </constraints>
@@ -74,11 +74,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="127"/>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Glass" width="238" height="250"/>
+        <image name="Glass" width="481" height="481"/>
         <image name="minus" catalog="system" width="128" height="24"/>
         <image name="plus" catalog="system" width="128" height="113"/>
     </resources>
